# rust-trivia

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
src/: api.rs  game.rs  main.rs  ui.rs
